--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
-scikit-learn
-pandas
-numpy
+numpy>=1.20.0
+pandas>=1.3.0
+scikit-learn>=1.0.0
+scipy>=1.7.0
+fastapi>=0.68.0
+uvicorn>=0.15.0
+pydantic>=1.8.0
+pytest>=6.0.0
+psutil>=5.8.0
+requests>=2.26.0
