chore(repo): clean structure, CI hardening, professional README v3.0.0
- Updated .gitignore with CSV/JSONL/submission exclusions
- Added pyproject.toml with project metadata and tool configs
- Rewrote CI pipeline: flake8, mypy, bandit, latency benchmark, smoke tests
- Professional README with architecture diagram, benchmarks, roadmap
- Cleaned temp files: __pycache__, .pytest_cache, data/, reports/

--- a/.gitignore
+++ b/.gitignore
@@ -54,10 +54,18 @@ venv.bak/
 *.pkl
 *.sig
 *.npz
+*.csv
+*.jsonl
 logs/
 data/
 experiments/
+reports/
 
 # OS
 .DS_Store
 Thumbs.db
+
+# Build artifacts
+submission.zip
+submission_build/
+model_backup.pkl
