--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,15 +7,14 @@ on:
     branches: [main]
 
 jobs:
-  test:
-    name: Test & Benchmark
+  lint:
+    name: Lint & Static Analysis
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Set up Python 3.11
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: "3.11"
           cache: "pip"
@@ -23,23 +22,76 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          pip install -r requirements.txt
+          pip install flake8 mypy bandit
+
+      - name: Flake8
+        run: flake8 src/ --max-line-length=120 --ignore=E501,W503,E203 --count
+
+      - name: Mypy
+        run: mypy src/ --ignore-missing-imports --no-error-summary || true
+
+      - name: Bandit Security Scan
+        run: bandit -r src/ -ll --skip B101,B311 -f json || true
+
+  test:
+    name: Test & Benchmark
+    runs-on: ubuntu-latest
+    needs: lint
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Python 3.11
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+          cache: "pip"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install pytest coverage
 
       - name: Run Unit Tests
-        run: |
-          # Ensure pytest is installed and runs
-          PYTHONPATH=. pytest tests/ -v
+        run: PYTHONPATH=. pytest tests/ -v --tb=short
 
       - name: Run Latency Benchmark
+        run: PYTHONPATH=. python benchmarks/latency_benchmark.py
+
+      - name: Model Load Validation
         run: |
-          # Run benchmark and check exit code (it fails if latency > 5ms)
-          PYTHONPATH=. python benchmarks/latency_benchmark.py
+          python -c "
+          import sys; sys.path.insert(0, '.')
+          from src.bidding.config import config
+          print(f'Config loaded: hash_space={config.model.hash_space}')
+          print('Model config validation: PASS')
+          "
+
+      - name: Economic Smoke Test
+        run: |
+          python -c "
+          import sys; sys.path.insert(0, '.')
+          from src.bidding.config import config
+          assert config.value_click > 0, 'Click value must be positive'
+          assert config.value_conversion > 0, 'Conversion value must be positive'
+          assert config.model.hash_space > 0, 'Hash space must be positive'
+          print('Economic smoke test: PASS')
+          "
 
   security:
     name: Security Scan
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      # Simulate a security scan (e.g., bandit)
-      - name: Basic Security Check
-        run: echo "Integrating bandit/safety here ideally"
+      - uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      - name: Install bandit
+        run: pip install bandit
+
+      - name: Run Bandit
+        run: bandit -r src/ -ll --skip B101,B311
