--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
           pip install flake8 mypy bandit
 
       - name: Flake8
-        run: flake8 src/ --max-line-length=120 --ignore=E501,W503,E203,W291,W293,E226,E302,E303,E701,E722,E711,E712,W291,E261,E111,E114,E117,E231,E305,F841,E402,E401 --count
+        run: flake8 src/ --max-line-length=120 --ignore=E501,W503,W504,E203,W291,W293,E226,E302,E303,E701,E722,E711,E712,W291,E261,E111,E114,E117,E231,E305,F841,E402,E401 --count
 
       - name: Mypy
         run: mypy src/ --ignore-missing-imports --no-error-summary || true
